--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     </div>
 
     <div>
-      <a href="https://www.linkedin.com/in/akhil-s-6a4404228" class="me-4 text-reset">
+      <a href="https://www.linkedin.com/in/akhil-s-6a4404228" class="me-4 text-reset"  target="_blank">
         <img src="./assets/icons/linkedin-brands.svg" class="icons">Linkedin</i>
       </a>
       </div>
@@ -254,8 +254,8 @@
             Akhil
           </h6>
           <p>
-            You can contact me at anytime through G-mail
-            <a href="https://mail.com/" class="me-4 text-reset">
+            You can contact me at anytime through euginesanju@24gmial.com
+            <a href="https://mail.com/" class="me-4 text-reset"  target="_blank">
               <img src="./assets/icons/envelope-circle-check-solid.svg" class="icons"></i>
             </a>
           </p>
